<resources>
    <string name="app_name">Healthy Cup</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_login">Login</string>
    <string name="dt_atualizacao">Updated 05/25/2014</string>
    <string name="info_farmacias">Information on pharmacies are from google</string>
    <string name="calendario">Calendar</string>
    <string name="erro_preenchimento_caract_especial">Enter a nickname without special characters</string>
    <string name="areas_febre_amarela">Areas with recommendation for vaccination against yellow fever</string>
    <string name="cve">CVE - Epidemiological Surveillance Center</string>
    <string name="defesa_civil">Defesa Civil Nacional</string>
    <string name="disquesaude">Dique Saúde</string>
    <string name="vigiagro">VIGIAGRO - Vigilância Agropecuária Internacional</string>
    <string name="malalegal">Legal Baggage</string>
    <string name="selecione_um_sentimento">Selecione pelo menos um sintoma.</string>
    <string name="title_activity_mudanca_nivel">New Category</string>
    <string name="parabens_categoria">Congratulations! You change the level!</string>
    <string name="parabens_novo_estadio">Congratulations! It is available now</string>
    <string name="parabens_novo_estadio_arena">Congratulations! You change the level and it is available a new stadium: </string>
    <string name="erro_maior_99_anos">Age incorrect!</string>
    <string name="envio_sentimento_erro">You can tell how you feel about </string>
    <string name="descreva_problema">Report your problem in detail</string>
    <string name="senha_atual">Current Password</string>
    <string name="nova_senha">New Password</string>
    <string name="digite_nova_senha">Enter the new password again</string>
    <string name="senha_trocada_sucesso">Password changed successfully</string>
    <string name="senha_trocada_erro">Error when changing password</string>
    <string name="erro_senha_nao_confere">Password does not match</string>
    <string name="erro_senhas_nao_confere">The new password does not match confirmation</string>
    <string name="proteja_gol">Protect the goal</string>
    <string name="telefones_uteis">Useful Phone Numbers</string>
    <string name="parceria">Partnership</string>
    <string name="desenvolvimento_suporte">Development and Support</string>
    <string name="fase_grupos">Group stage</string>
    <string name="fase_oitava">Eighth-finals</string>
    <string name="fase_quarta">Quarterfinals</string>
    <string name="fase_semi">Semifinal</string>
    <string name="fase_final">Final</string>
    <string name="fase_3lugar">3rd Place</string>
    <string name="saude_viajente">Traveler Health</string>
    <string name="svs">Secretaria de Vigilância em Saúde</string>
    <string name="form_notificacao">Form for notification of diseases and aliments</string>
    <string name="min_agricultura">Ministry of Agriculture </string>
    <string name="portal_copa">Portal cup </string>
    <string name="app_gov">Federal Government´s app</string>
    <string name="cievs">CIEVS</string>
    <string name="relate_problema">Report your problem in detail</string>
    <string name="duvida">Dúvidas</string>
    <string name="envio_duvida_sucesso">Envio de dúvida com sucesso!</string>
    <string name="envio_duvida_erro">Erro ao enviar dúvida. Tente mais tarde.</string>
    <string name="central_ajuda">Central de Ajuda</string>
    <string name="como_ajudalo">Como podemos ajudá-lo?</string>
    <string name="selecione_sentimento">Selecione um sentimento tocando em seu avatar</string>
    <string name="lembretes_saude">Lembretes de Saúde</string>
    <string name="erro_sem_internet">This functionality requires Internet access!</string>
    <string name="grupo">Group</string>
    <string name="rodada">Round</string>
    <string name="vencedor_quartas">WINNER OF QUARTER-FINAL</string>
    <string name="perdedor_semi">LOSER OF SEMI-FINALS</string>
    <string name="vencedor_semi">WINNER OF SEMI-FINALS</string>
    <string name="brasil">Brazil</string>
    <string name="croacia">Croatia</string>
    <string name="mexico">Mexico</string>
    <string name="camarao">Cameroon</string>
    <string name="espanha">Spain</string>
    <string name="holanda">Netherlands</string>
    <string name="chile">Chile</string>
    <string name="australia">Australia</string>
    <string name="colombia">Colombia</string>
    <string name="grecia">Greece</string>
    <string name="costamarfin">Côte D´Ivoire</string>
    <string name="japao">Japan</string>
    <string name="uruguai">Uruguay</string>
    <string name="costarica">Costa Rica</string>
    <string name="inglaterra">England</string>
    <string name="italia">Italy</string>
    <string name="suica">Switzerland</string>
    <string name="equador">Ecuador</string>
    <string name="franca">France</string>
    <string name="honduras">Honduras</string>
    <string name="argentina">Argentina</string>
    <string name="bosnia">Bosnia and Herzegovina</string>
    <string name="iran">Iran</string>
    <string name="nigeria">Nigeria</string>
    <string name="alemanha">Germany</string>
    <string name="portugal">Portugal</string>
    <string name="gana">Ghana</string>
    <string name="usa">USA</string>
    <string name="belgica">Belgium</string>
    <string name="argelia">Algeria</string>
    <string name="russia">Russia</string>
    <string name="korea">Korea Republic</string>
    <string name="informacoes">Information</string>
    <string name="itens_jogo">Game Itens</string>
    <string name="arenas">Arenas</string>
    <string name="categorias">Categories</string>
    <string name="txtapresentacao">Thank you for participating in the Healthy Cup 2014. \n\nThe Healthy Cup app is a project of health participatory surveillance during the Fifa World Cup Brazil 2014 ™ so that everyone can participate voluntarily that the National Health System (SUS) strategy. Read more about the app on the Options screen.</string>
    <string name="cancelar">Cancel</string>
    <string name="sem_localizacao">Please activate localization service for sending information.</string>
    <string name="se_persisitir_sintoma">Thank you for the information. Find a medical care near you.\n\nKeep informing about your health daily!</string>
    <string name="saibamais">Learn More</string>
    <string name="abrir">Open</string>
    <string name="consulados">Consulates</string>
    <string name="alterar_senha">Change password</string>
    <string name="horas">hours</string>
    <string name="linksuteis">Links</string>
    <string name="categoria_txt1">Welcome to the soccer world. From now on, you will start your playing career. Good luck.</string>
    <string name="dente_leite">U-11</string>
    <string name="cat_desc_dente_leite" formatted="false">1 &#8211; 13 %: Arena Pantanal \n14 &#8211; 19 %: Arena da Baixada</string>
    <string name="mirim">U-13</string>
    <string name="cat_desc_mirim" formatted="false">20 &#8211; 26 %: Estádio das Dunas \n27 &#8211; 33 %: Arena Amazônia</string>
    <string name="infantil">U-15</string>
    <string name="cat_desc_infantil" formatted="false">34 &#8211; 39 %: Arena Pernambuco \n40 &#8211; 46 %: Estádio Castelão</string>
    <string name="juvenil">U-18</string>
    <string name="cat_desc_juvenil" formatted="false">47 &#8211; 53 %: Estádio Beira-rio \n54 &#8211; 59 %: Arena Fonte Nova</string>
    <string name="junior">U-20</string>
    <string name="cat_desc_junior" formatted="false">60 &#8211; 66 %: Estádio Nacional \n67 &#8211; 73 %: Estádio Minerão</string>
    <string name="profissional">Professional</string>
    <string name="cat_desc_profissional" formatted="false">74 &#8211; 79 %: Arena São Paulo \n80+ %: Estádio Maracanã</string>
    <string name="acesse_site">Visit the site</string>
    <string name="HealthMap">HealthMap</string>
    <string name="ProMed">ProMed</string>
    <string name="Fifa">Fifa</string>
    <string name="OMS">Organização Mundial da Saúde</string>
    <string name="hospitais_google">Google´s hospitals result</string>
    <string name="selecoes">Teams</string>
    <string name="calendario_jogos">Calendar of matches</string>
    <string name="versao">Version</string>
    <string name="governamentais">Government</string>
    <string name="naogovernamentais">Non-government</string>
    <string name="outros">Others</string>
    <string name="higiene">Basic precautions</string>
    <string name="vacinas">Vaccinations</string>
    <string name="prevencao_doecas">Prevention of diseases</string>
    <string name="prevencao_acidentes">Prevention of accidents</string>
    <string name="prevencao_violencia">Violence prevention</string>
    <string name="urgencia_emergencias">Emergency care</string>
    <string name="hospitais_ref">Reference Hospitals</string>
    <string name="farmacias">Pharmacies</string>
    <string name="infor_selecao_sentimento">Tell us how you are feeling. \nTouch and drag your finger up or down.</string>
    <string name="itens_categoria">Find out in which category you are.</string>
    <string name="itens_pontos">Earn points stating how is your health. On game day participation is worth 3 points and when there is no game, only 1 point. You can score every 2 hours. But pay attention, because earning points is not enough to become a professional player. Daily participation is the best way to get to the final stage of the game.</string>
    <string name="itens_barra">The engagement bar is directly related to your participation. The more engaged you are, faster you advance in category and gets new arenas.</string>
    <string name="itens_arena">Find out  in which Arena you are. </string>
    <string name="informacao_botao">Tap the OK button to confirm how you are feeling.</string>
    <string name="samu">SAMU - Mobile Emergency Care Service</string>
    <string name="disque_intox">DISQUE-INTOXICAÇÃO - Questions and reports related to intoxications</string>
    <string name="anvisa">ANVISA - National Health Surveillance Agency</string>
    <string name="anac">ANAC - National Civil Aviation Agency</string>
    <string name="antt">ANTT - National Land Transportation</string>
    <string name="antaq">ANTAQ - National Waterway Transportation Agency</string>
    <string name="pc">Civil Police</string>
    <string name="pf">Federal Police</string>
    <string name="pm">Military Police</string>
    <string name="prf">Federal Highway Police</string>
    <string name="bombeiros">Fire Station</string>
    <string name="abuso_infantil">Report abuse against children and adolescents  hotline</string>
    <string name="cadastrese">Join us</string>
    <string name="entrar_com_facebook">Join with Facebook</string>
    <string name="entrar">Entry</string>
    <string name="prosseguindo_termos">By continuing you agree to the terms of use and privacy policy</string>
    <string name="fem">Female</string>
    <string name="masc">Male</string>
    <string name="apelido">Nickname</string>
    <string name="idade">Age</string>
    <string name="email_cadastro">E-mail registration</string>
    <string name="email_confirm">E-mail confirmation</string>
    <string name="senha">Password</string>
    <string name="senha_confirm">Password confirmation</string>
    <string name="apelido_email">E-mail</string>
    <string name="termos_uso">Terms of use</string>
    <string name="denunciar_problema">Report Application Failure</string>
    <string name="termos_politicas">Terms and Policies</string>
    <string name="sobre">About</string>
    <string name="sair">Exit</string>
    <string name="pontos">Points</string>
    <string name="esqueceu_senha">Forgot your password?</string>
    <string name="email">E-mail</string>
    <string name="texto_esqueci_senha">Enter the e-mail registered to send your password</string>
    <string name="enviar">Send</string>
    <string name="li_e_concordo">"I have read and agree to the "</string>
    <string name="jogador">Gamer</string>
</resources>