<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/alterar_senha"
        android:textColor="@color/azul_texto"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText1"
        style="@style/txtAlterarSEnha"
        android:ems="10"
        android:hint="@string/senha_atual" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        style="@style/txtAlterarSEnha"
        android:ems="10"
        android:hint="@string/nova_senha" />

    <EditText
        android:id="@+id/editText3"
        style="@style/txtAlterarSEnha"
        android:ems="10"
        android:hint="@string/digite_nova_senha" />

    <Button
        android:id="@+id/button1"
        style="@style/btnGeral"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/enviar" />

    <Button
        android:id="@+id/button2"
        style="@style/btnGeralBranco"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:text="@android:string/cancel" />

</LinearLayout>
