<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/btnLoginEntrar"
        style="@style/btnGeral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="enviarSenha"
        android:text="@string/enviar" />

    <EditText
        android:id="@+id/txtLoginEmail"
        style="@style/textBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLoginEntrar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:drawableLeft="@drawable/icone_cadastrese"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txtTwitterNomeApresentacao"
        style="@style/texto_azul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtLoginEmail"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"
        android:text="@string/texto_esqueci_senha" />

</RelativeLayout>